# yaserde

.github/workflows/: mayhem.yml
examples/src/: default_namespace.rs  lib.rs
mayhem/: Dockerfile  deserialize.mayhemfile
yaserde/fuzz/: Cargo.toml
yaserde/fuzz/fuzz_targets/: deserialize.rs
