[package]
name = "yaserde-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.yaserde]
path = ".."

[dependencies.yaserde_derive]
path = "../../yaserde_derive"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
debug = []

[[bin]]
name = "deserialize"
path = "fuzz_targets/deserialize.rs"
test = false
doc = false

[profile.release]
debug = true
